[package]
name = "poe-ninja-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for querying Path of Exile item prices from poe.ninja API"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
name = "poe_ninja_cli"
path = "src/lib.rs"

[[bin]]
name = "poe-ninja-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
tabled = "0.15"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
tokio-test = "0.4"

[features]
network-tests = []

[profile.release]
strip = true
lto = true
codegen-units = 1